Se añaden los colores en el css y se intentan alinear los iconos

--- a/Akebia-HTML4/Principal.html
+++ b/Akebia-HTML4/Principal.html
@@ -10,24 +10,23 @@
 </head>
 <body>
     <div class="header">
-        <p>
-            <div class="leftH">
-                <img width="50px" alt="Akebia" src="Documents/logo.png" /> Akebia 
+        <div id="contenedor">
+            <div id="contenidos">
+                <div id="columna1"><img width="50px" alt="Akebia" src="Documents/logo.png" /> Akebia</div>
+                <div id="columna2"><img width="50px" alt="SuperMercados" src="Documents/cesta.png"/></div>
+                <div id="columna2">
+                    <img width="30px" alt="Añadir Lista" src="Documents/plus.png" /> 
+                    <img width="30px" alt="Eliminar Lista" src="Documents/minus.png" />
+                    <img width="30px" alt="Buscar Lista" src="Documents/search.png" />
+                </div>
             </div>
-            <img width="50px" alt="SuperMercados" src="Documents/cesta.png"/>
-            <div class="rightH">
-                <img width="30px" alt="Añadir Lista" src="Documents/plus.png" /> <img width="30px" alt="Eliminar Lista" src="Documents/minus.png" />
-                <img width="30px" alt="Buscar Lista" src="Documents/search.png" />
-            </div>
-        </p>
+        </div>
     </div>
     <div class="content">
-        <p>Content</p>
+        <p><div class="contentText">Content</div></p>
     </div>
     <div class="footer">
-        <p>
-            Footer
-        </p>
+        <p><div class="footerText">Footer</div></p>
     </div>
 </body>
 </html>
