Se consigue terminar el header y se empieza a realizar el foter a partir de la cabecera

--- a/Akebia-HTML4/Principal.html
+++ b/Akebia-HTML4/Principal.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="header">
-        <div id="contenedor">
-            <div id="contenidos">
-                <div id="columna1"><img width="50px" alt="Akebia" src="Documents/logo.png" /> Akebia</div>
+        <div id="contenedorH">
+            <div id="contenidosH">
+                <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
                 <div id="columna2"><img width="50px" alt="SuperMercados" src="Documents/cesta.png"/></div>
-                <div id="columna2">
-                    <img width="30px" alt="Añadir Lista" src="Documents/plus.png" /> 
-                    <img width="30px" alt="Eliminar Lista" src="Documents/minus.png" />
-                    <img width="30px" alt="Buscar Lista" src="Documents/search.png" />
+                <div id="columna3">
+                    <button id="btnAniadir" type="button"><img width="30px" alt="Añadir Lista" src="Documents/plus.png" /></button> 
+                    <button id="btnEliminar" type="button"><img width="30px" alt="Eliminar Lista" src="Documents/minus.png" /></button> 
+                    <button id="btnBuscar" type="button"><img width="30px" alt="Buscar Lista" src="Documents/search.png" /></button> 
                 </div>
             </div>
         </div>
@@ -26,7 +26,13 @@
         <p><div class="contentText">Content</div></p>
     </div>
     <div class="footer">
-        <p><div class="footerText">Footer</div></p>
+        <div id="contenedorH">
+            <div id="contenidosH">
+                <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
+                <div id="columna2"></div>
+                <div id="columna3"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
