--- a/Akebia-HTML4/Principal.html
+++ b/Akebia-HTML4/Principal.html
@@ -10,27 +10,39 @@
 </head>
 <body>
     <div class="header">
-        <div id="contenedorH">
-            <div id="contenidosH">
-                <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
-                <div id="columna2"><img width="50px" alt="SuperMercados" src="Documents/cesta.png"/></div>
+        <div id="contenedor">
+            <div id="contenidos">
+                <div id="columna1"><a href="Principal.html"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /></a> <p class="titulo">Akebia</p></div>
+                <div id="columna2"><a href="Mercados.html"><img  width="50px" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
                 <div id="columna3">
                     <button id="btnAniadir" type="button"><img width="30px" alt="Añadir Lista" src="Documents/plus.png" /></button> 
                     <button id="btnEliminar" type="button"><img width="30px" alt="Eliminar Lista" src="Documents/minus.png" /></button> 
-                    <button id="btnBuscar" type="button"><img width="30px" alt="Buscar Lista" src="Documents/search.png" /></button> 
+                    <button id="btnBuscar" type="button"><img width="30px" alt="Buscar Lista" src="Documents/search.png" /></button>
+                    <button id="btnRegistrarse" type="button"><a href="Registrate.html">Registarse</a></button> 
+                    <button id="btnIniciarSesion" type="button"><a href="Login.html">Iniciar Sesion</a></button>
                 </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <p><div class="contentText">Content</div></p>
+        <div class="contentText">
+            <div id="contenidos">
+                <div id="columnaC1"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+                <div id="columnaC2"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+                <div id="columnaC3"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+            </div>
+            <div id="contenidos">
+                <div id="columnaC1"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+                <div id="columnaC2"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+                <div id="columnaC3"><a href="Lista.html"><img width="60%" alt="Lista" src="Documents/postit.png" /></a></div>
+            </div>
+        </div>
     </div>
     <div class="footer">
-        <div id="contenedorH">
-            <div id="contenidosH">
+        <div id="contenedor">
+            <div id="contenidos">
                 <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
-                <div id="columna2"></div>
-                <div id="columna3"></div>
+                <div id="columna3"><button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button></div>
             </div>
         </div>
     </div>
