Se realizan todas las paginas relacionadas con los formularios y se soluciona(a medias) el problema con la pagina del supermercado. Finalmente solo falta realizar la pagina de la Lista

--- a/Akebia-HTML4/Mercados.html
+++ b/Akebia-HTML4/Mercados.html
@@ -27,8 +27,8 @@
     <div class="content">
         <div class="contentText">
             <div id="contenidos">
-                <div id="columna2">
-                    <img class="papel" src="Documents/papel.png" /><p class="supermercados">SuperMercados Disponibles</p>
+                <div id="columnaM2">
+                    <p class="supermercados">SuperMercados Disponibles</p>
                 </div>
             </div>
             <div id="contenidos">
