--- a/Akebia-HTML4/Registrate.html
+++ b/Akebia-HTML4/Registrate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Akebia - Registrate</title>
+    <title>Akebia - Iniciar Sesion</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/general.css'>
     <script src='main.js'></script>
@@ -20,8 +20,17 @@
         </div>
     </div>
     <div class="content">
-        <div class="contentText">
-            
+        <div class="contentTextForm">
+            <div class="login-page">
+                <div class="form">
+                    <form class="login-form">
+                        <input type="text" placeholder="Usuario"/>
+                        <input type="text" placeholder="Mail"/>
+                        <input type="password" placeholder="Contraseña"/>
+                        <button><a href="Principal.html">Registrarse</a></button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
