--- a/Akebia-HTML4/Contactanos.html
+++ b/Akebia-HTML4/Contactanos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Akebia - Contactanos</title>
+    <title>Akebia - Iniciar Sesion</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/general.css'>
     <script src='main.js'></script>
@@ -15,21 +15,32 @@
                 <div id="columna1"><a href="Principal.html"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /></a> <p class="titulo">Akebia</p></div>
                 <div id="columna2"><a href="Mercados.html"><img  width="50px" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
                 <div id="columna3">
-                    <button id="btnRegistrarse2" type="button"><a href="Registrate.html">Registarse</a></button> 
-                    <button id="btnIniciarSesion2" type="button"><a href="Login.html">Iniciar Sesion</a></button>
                 </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <div class="contentText">
-            
+        <div class="contentTextForm">
+            <div class="login-page">
+                <div class="form">
+                    <form class="login-form">
+                        <input type="text" placeholder="Usuario"/>
+                        <input type="text" placeholder="Mail"/>
+                        <input type="text" placeholder="Telefono"/>
+                        <input type="text" placeholder="Mensaje"/>
+                        <button><a href="Principal.html">Enviar</a></button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
         <div id="contenedor">
             <div id="contenidos">
                 <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
+                <div id="columna3">
+                    <button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button>
+                </div>
             </div>
         </div>
     </div>
