--- a/Akebia-HTML4/Login.html
+++ b/Akebia-HTML4/Login.html
@@ -20,8 +20,17 @@
         </div>
     </div>
     <div class="content">
-        <div class="contentText">
-            
+        <div class="contentTextForm">
+            <div class="login-page">
+                <div class="form">
+                    <form class="login-form">
+                        <input type="text" placeholder="Usuario"/>
+                        <input type="password" placeholder="Contraseña"/>
+                        <button><a href="Principal.html">Iniciar Sesion</a></button>
+                        <p class="message">¿Olvidaste la contraseña? <a href="ResetPassword.html">Resetear</a></p>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
