Se termina la pagina en HTML 4

--- a/Akebia-HTML4/Lista.html
+++ b/Akebia-HTML4/Lista.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Akebia - Lista</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/general.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/listas.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -26,8 +26,11 @@
     </div>
     <div class="content">
         <div class="contentText">
-            <div class="contentText">
-            </div>
+            <ul class="compra">
+                <li>Leche</li>
+                <li>Huevos</li>
+                <li>Pan</li>
+            </ul>
         </div>
     </div>
     <div class="footer">
