--- a/Akebia-HTML4/Mercados.html
+++ b/Akebia-HTML4/Mercados.html
@@ -5,13 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Akebia - Mercados</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/general.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/mercados.css'>
     <script src='main.js'></script>
 </head>
 <body>
     <div class="header">
         <div id="contenedor">
-            <div id="contenidos">
+            <div class="contenidos">
                 <div id="columna1"><a href="Principal.html"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /><a> <p class="titulo">Akebia</p></div>
                 <div id="columna2"><a href="Mercados.html"><img  width="50px" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
                 <div id="columna3">
@@ -26,12 +26,12 @@
     </div>
     <div class="content">
         <div class="contentText">
-            <div id="contenidos">
+            <div class="contenidos">
                 <div id="columnaM2">
                     <p class="supermercados">SuperMercados Disponibles</p>
                 </div>
             </div>
-            <div id="contenidos">
+            <div class="contenidos">
                 <div id="columna2">
                     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19706.052349300175!2d-16.548329612668056!3d28.411413485087415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSupermercados!5e0!3m2!1ses!2ses!4v1652920000970!5m2!1ses!2ses" 
                     width="1000" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -41,7 +41,7 @@
     </div>
     <div class="footer">
         <div id="contenedor">
-            <div id="contenidos">
+            <div class="contenidos">
                 <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
                 <div id="columna3">
                     <button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button>
