--- a/Akebia-HTML4/Principal.html
+++ b/Akebia-HTML4/Principal.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Akebia - Pagina Principal</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/general.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/principal.css'>
     <script src='main.js'></script>
 </head>
 <body>
