Se añaden los cambios finales realizados para el trabajo de HTML 5

--- a/Akebia-HTML5/Mercados.html
+++ b/Akebia-HTML5/Mercados.html
@@ -12,19 +12,19 @@
     <header>
         <article class="contenedor">
             <article class="contenidos">
-                <div id="columna1"><a href="Principal.html"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /><a> <p class="titulo">Akebia</p></div>
-                <div id="columna2"><a href="Mercados.html"><img  width="50px" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
+                <div id="columna1"><a href="Principal.html"><img class="logo" alt="Akebia" src="Documents/logo.png" /></a> <p class="titulo">Akebia</p></div>
+                <div id="columna2"><a href="Mercados.html"><img class="cesta" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
                 <div id="columna3">
-                    <button id="btnAniadir" type="button"><img width="30px" alt="Añadir Lista" src="Documents/plus.png" /></button> 
-                    <button id="btnEliminar" type="button"><img width="30px" alt="Eliminar Lista" src="Documents/minus.png" /></button> 
-                    <button id="btnBuscar" type="button"><img width="30px" alt="Buscar Lista" src="Documents/search.png" /></button>
+                    <button id="btnAniadir" type="button"><img class="btnAction" width="30px" alt="Añadir Lista" src="Documents/plus.png" /></button> 
+                    <button id="btnEliminar" type="button"><img class="btnAction" width="30px" alt="Eliminar Lista" src="Documents/minus.png" /></button> 
+                    <button id="btnBuscar" type="button"><img class="btnAction" width="30px" alt="Buscar Lista" src="Documents/search.png" /></button>
                     <button id="btnRegistrarse" type="button"><a href="Registrate.html">Registarse</a></button> 
                     <button id="btnIniciarSesion" type="button"><a href="Login.html">Iniciar Sesion</a></button>
                 </div>
             </article>
         </article>
     </header>
-    <section class="content">
+    <section>
         <article class="contentText">
             <article class="contenidos">
                 <div id="columnaM2">
@@ -42,10 +42,8 @@
     <footer>
         <article class="contenedor">
             <article class="contenidos">
-                <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
-                <div id="columna3">
-                    <button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button>
-                </div>
+                <div id="columna1"><img class=logo alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
+                <div id="columna3"><button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button></div>
             </article>
         </article>
     </footer>
