--- a/Akebia-HTML5/ResetPassword.html
+++ b/Akebia-HTML5/ResetPassword.html
@@ -12,10 +12,9 @@
     <header>
         <article class="contenedor">
             <article class="contenidos">
-                <div id="columna1"><a href="Principal.html"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /></a> <p class="titulo">Akebia</p></div>
-                <div id="columna2"><a href="Mercados.html"><img  width="50px" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
-                <div id="columna3">
-                </div>
+                <div id="columna1"><a href="Principal.html"><img class="logo" alt="Akebia" src="Documents/logo.png" /></a> <p class="titulo">Akebia</p></div>
+                <div id="columna2"><a href="Mercados.html"><img class="cesta" alt="SuperMercados" src="Documents/cesta.png"/></a></div>
+                <div id="columna3"></div>
             </article>
         </article>
     </header>
@@ -34,10 +33,8 @@
     <footer>
         <article class="contenedor">
             <article class="contenidos">
-                <div id="columna1"><img width="57px" height="57px" alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
-                <div id="columna3">
-                    <button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button>
-                </div>
+                <div id="columna1"><img class=logo alt="Akebia" src="Documents/logo.png" /> <p class="titulo">Akebia</p></div>
+                <div id="columna3"><button id="btnContactanos" type="button"><a href="Contactanos.html">Contactanos</a></button></div>
             </article>
         </article>
     </footer>
